<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrazyTipCal</string>
    <string name="action_settings">Settings</string>

    <string name="bill_text_view">bill</string>
    <string name="bill_edit_view">0.0</string>

    <string name="tip_text_view">Tip</string>
    <string name="tip_edit_view">0.15</string>

    <string name="final_text_view">Final Bill</string>
    <string name="final_bill_edit_view">0.15</string>

    <string name="change_tip_text_view">tip</string>
    <string name="change_tip_bar_text_view">Change Tip Rate</string>

    <string name="introduction">Introduction</string>
    <string name="intro_friendly">Friendly</string>
    <string name="intro_Opinion">Opinion</string>
    <string name="intro_special">Specials</string>

    <string name="available">Availability</string>
    <string name="available_bad_radiobutton">Bad</string>
    <string name="available_ok_radiobutton">Ok</string>
    <string name="available_good_radiobutton">Good</string>


    <string name="time_waiting">Time Waiting For Service</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>

    <string-array name="problem_solving">
        <item>Problem Solving</item>
        <item>Bad</item>
        <item>OK</item>
        <item>Good</item>
    </string-array>






</resources>
